--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "11.5.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
